# epub-rs

./: .gitignore  Cargo.toml  README.md  test.epub
.github/workflows/: rust.yml
src/: archive.rs  doc.rs  lib.rs  xmlutils.rs
tests/: archive.rs  doc.rs  read.rs
tests/docs/: book2.epub  fatbf.epub
