[package]
authors = ["Daniel García Moreno <dani@danigm.net>"]
description = """
Library to support the reading of epub files.
"""
documentation = "https://docs.rs/epub/"
exclude = ["test.epub"]
keywords = ["epub", "ebook"]
license = "GPL-3.0"
name = "epub"
repository = "https://github.com/danigm/epub-rs.git"
version = "2.1.1"
edition = "2021"

[dependencies]
xml-rs = "0.8.14"
percent-encoding = "2.3.0"
thiserror = "1.0.40"

[dependencies.zip]
version = "0.6.6"
default-features = false
features = [
    "deflate",
]

[dependencies.regex]
version = "1.8.4"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = [
    "std",
    "unicode",
    "perf-cache",
    "perf-dfa",
    "perf-inline",
]
