[package]
authors = ["Daniel García Moreno <dani@danigm.net>"]
description = """
Library to support the reading of epub files.
"""
documentation = "https://docs.rs/epub/"
exclude = ["test.epub"]
keywords = ["epub", "ebook"]
license = "GPL-3.0"
name = "epub"
repository = "https://github.com/danigm/epub-rs.git"
version = "2.1.3"
edition = "2021"

[dependencies]
xml-rs = "0.8.26"
percent-encoding = "2.3.1"
thiserror = "2.0.12"

[features]
mock = []

[dependencies.zip]
version = "2.6.1"
default-features = false
features = [
    "deflate",
]

[dependencies.regex]
version = "1.11.1"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = [
    "std",
    "unicode",
    "perf-cache",
    "perf-dfa",
    "perf-inline",
]
